[gd_scene load_steps=31 format=3 uid="uid://c1hauk6vcsonh"]

[ext_resource type="Texture2D" uid="uid://cog7sk80ykf4o" path="res://sprites/bomb.png" id="1_1wt4j"]
[ext_resource type="Script" uid="uid://vk74n8wnip5j" path="res://scenes/Item.gd" id="1_co2nu"]
[ext_resource type="Shader" uid="uid://dl6p4elpfxi71" path="res://scenes/Item.gdshader" id="1_udi6n"]
[ext_resource type="Texture2D" uid="uid://bej4v4xthspa2" path="res://sprites/box.png" id="2_ere0c"]
[ext_resource type="Texture2D" uid="uid://bljcg74u2x5sd" path="res://sprites/invisibility.png" id="3_kgqrp"]
[ext_resource type="Texture2D" uid="uid://b3tca6epdaoix" path="res://sprites/rock.png" id="4_150gj"]
[ext_resource type="Texture2D" uid="uid://c6gf7vjf30biq" path="res://sprites/coin.png" id="5_kmp7s"]
[ext_resource type="Texture2D" uid="uid://mpqlvpcht35a" path="res://sprites/simul_box.png" id="5_lqc3o"]
[ext_resource type="Texture2D" uid="uid://csp0ardyjl54b" path="res://sprites/spring.png" id="6_8fby7"]
[ext_resource type="Texture2D" uid="uid://pm7mhxqnqxtq" path="res://sprites/radar.png" id="6_x2qwg"]
[ext_resource type="Texture2D" uid="uid://df545tsy68qs1" path="res://sprites/growing_plant.png" id="7_kauj1"]
[ext_resource type="Texture2D" uid="uid://c3wmt7870xukn" path="res://sprites/teleporter_box.png" id="7_ogk5g"]
[ext_resource type="FontFile" uid="uid://cqp5o2vpb07yg" path="res://fonts/prstartk.ttf" id="10_7feub"]
[ext_resource type="Texture2D" uid="uid://trxeowv3jmbb" path="res://sprites/smoke_bomb.png" id="10_7tbfy"]
[ext_resource type="Texture2D" uid="uid://b3n7eech0mndx" path="res://sprites/arrows1.png" id="12_adkqq"]
[ext_resource type="Texture2D" uid="uid://dkompgmyj4pmk" path="res://sprites/arrows2.png" id="13_p1otb"]
[ext_resource type="Texture2D" uid="uid://iyty0pio72t1" path="res://sprites/chest.png" id="14_ex0y7"]
[ext_resource type="Texture2D" uid="uid://cduya7qxpjne4" path="res://sprites/chest_open.png" id="15_5bc42"]
[ext_resource type="Texture2D" uid="uid://cjg71ls267rbj" path="res://sprites/question_mark.png" id="16_85bpg"]
[ext_resource type="Texture2D" uid="uid://of3kvbvfwbdg" path="res://sprites/super_chest.png" id="17_jay0n"]
[ext_resource type="Texture2D" uid="uid://brfxr7m0l2f2j" path="res://sprites/super_chest_open.png" id="18_sefv7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dym6o"]
size = Vector2(30, 21)

[sub_resource type="Animation" id="Animation_vu7jo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_anim:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -33)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite_anim:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_8xrs0"]
resource_name = "new_animation"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_anim:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -33), Vector2(0, -66)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite_anim:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jay0n"]
_data = {
&"RESET": SubResource("Animation_vu7jo"),
&"new_animation": SubResource("Animation_8xrs0")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_jkk80"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_1wt4j")
}],
"loop": true,
"name": &"bomb",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ere0c")
}],
"loop": true,
"name": &"clone",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_kmp7s")
}],
"loop": true,
"name": &"coin",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_kgqrp")
}],
"loop": true,
"name": &"invisibility",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_150gj")
}],
"loop": true,
"name": &"muffin",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_kauj1")
}],
"loop": true,
"name": &"plant",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_x2qwg")
}],
"loop": true,
"name": &"radar",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_lqc3o")
}],
"loop": true,
"name": &"simul",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_7tbfy")
}],
"loop": true,
"name": &"smoke",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_8fby7")
}],
"loop": true,
"name": &"spring",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_ogk5g")
}],
"loop": true,
"name": &"teleport",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_85bpg")
}],
"loop": true,
"name": &"unknown",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8xrs0"]
resource_local_to_scene = true
shader = ExtResource("1_udi6n")
shader_parameter/shine_color = Color(1, 1, 1, 1)
shader_parameter/shine_speed = 1.0
shader_parameter/shine_size = 0.01
shader_parameter/white = 0.0
shader_parameter/on = false

[sub_resource type="SpriteFrames" id="SpriteFrames_kipbu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_ex0y7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_5bc42")
}],
"loop": true,
"name": &"open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_jay0n")
}],
"loop": true,
"name": &"super_default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_sefv7")
}],
"loop": true,
"name": &"super_open",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jtgsv"]
resource_local_to_scene = true
shader = ExtResource("1_udi6n")
shader_parameter/shine_color = Color(1, 1, 1, 1)
shader_parameter/shine_speed = 3.0
shader_parameter/shine_size = 0.01
shader_parameter/white = 0.0
shader_parameter/on = true

[sub_resource type="SpriteFrames" id="SpriteFrames_2inxc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_adkqq")
}, {
"duration": 1.0,
"texture": ExtResource("13_p1otb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Item" type="Area2D"]
script = ExtResource("1_co2nu")

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2(0, -10.5)
shape = SubResource("RectangleShape2D_dym6o")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jay0n")
}
speed_scale = 5.0

[node name="sprite_anim" type="AnimatedSprite2D" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.52549)
position = Vector2(0, -33)
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_jkk80")
animation = &"bomb"
offset = Vector2(0, -16)

[node name="sprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_8xrs0")
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_kipbu")

[node name="display" type="Node2D" parent="."]
visible = false
position = Vector2(0, -87)

[node name="back2" type="ColorRect" parent="display"]
z_index = 4096
offset_left = -303.0
offset_top = -32.0
offset_right = 247.0
offset_bottom = 47.0
metadata/_edit_use_anchors_ = true

[node name="back" type="ColorRect" parent="display"]
z_index = 4096
offset_left = -302.0
offset_top = -31.0
offset_right = 246.0
offset_bottom = 46.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="sprite" type="AnimatedSprite2D" parent="display/back"]
material = SubResource("ShaderMaterial_jtgsv")
position = Vector2(45, 61)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_jkk80")
animation = &"unknown"
offset = Vector2(0, -16)

[node name="lbl_item" type="Label" parent="display/back"]
layout_mode = 0
offset_left = 84.0
offset_top = 2.0
offset_right = 508.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("10_7feub")
text = "== ????? ==
Â¿Abrir el cofre?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="arrows" type="AnimatedSprite2D" parent="display/back"]
position = Vector2(520, 39)
sprite_frames = SubResource("SpriteFrames_2inxc")
autoplay = "default"
frame_progress = 0.017781

[node name="coinpos" type="Marker2D" parent="."]
position = Vector2(0, -48)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
